// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InterfaceType should expose GQL interface type 2`] = `
"\\"\\"\\"a vehicle interface for a basic spec\\"\\"\\"
interface IVehicle {
  windows: Int
  seats: Int
}

\\"\\"\\"a vehicle interface for a basic spec\\"\\"\\"
interface IEntity {
  id: Int
}

type Car implements IVehicle & IEntity {
  id: Int
  wheels: Float
  windows: Int
  seats: Int
}

type Boat implements IVehicle & IEntity {
  id: Int
  propellers: Float
  windows: Int
  seats: Int
}

type Katamaran implements IVehicle & IEntity {
  id: Int
  propellers: Float
  hulls: Float
  windows: Int
  seats: Int
}

type Query {
  vehicles: [IVehicle!]
  boat: Boat
  car: Car
}"
`;

exports[`InterfaceType should resolve correctly 1`] = `
Object {
  "data": Object {
    "vehicles": Array [
      Object {
        "__typename": "Car",
        "seats": 4,
        "wheels": 4,
        "windows": 6,
      },
      Object {
        "__typename": "Boat",
        "propellers": null,
        "seats": 150,
        "windows": 30,
      },
    ],
  },
}
`;

exports[`InterfaceType should resolve correctly even when extending another implemetor type 1`] = `
Object {
  "data": Object {
    "boat": Object {
      "__typename": "Boat",
      "propellers": null,
      "seats": 150,
      "windows": 30,
    },
    "car": Object {
      "__typename": "Car",
      "seats": 4,
      "wheels": 4,
      "windows": 6,
    },
    "vehicles": Array [
      Object {
        "__typename": "Car",
        "seats": 4,
        "wheels": 4,
        "windows": 6,
      },
      Object {
        "__typename": "Boat",
        "propellers": null,
        "seats": 150,
        "windows": 30,
      },
      Object {
        "__typename": "Katamaran",
        "hulls": 2,
        "seats": null,
        "windows": null,
      },
    ],
  },
}
`;
